samples/_failures_safe/1761611001_b1a3d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e588f09.c: In function ‘main’:
./samples/SAFE/__tmp_9e588f09.c:139:25: error: expected ‘)’ at end of input
  139 |     add_edge(&g, 2, 5, 2
      |             ~           ^
      |                         )
./samples/SAFE/__tmp_9e588f09.c:139:5: error: expected declaration or statement at end of input
  139 |     add_edge(&g, 2, 5, 2
      |     ^~~~~~~~
